# ROSE-dashboard

./: .gitignore  MANIFEST.in  README.md  readme.md  requirements.txt  run_flask  setup.cfg
dashboard/: app_utils.py  application.py  create_input_json.py  validate_json.py
data_SoS/: SOS.json
tests/: test_application.py  utils.py
tests/test_data/: test_rose_input.json
