[metadata]
name = ROSE-dashboard
version = 1.0
author = ROSE team
description = ROSE model dashboard
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: Microsoft :: Windows
	Operating System :: Unix
[options]
packages =
    dashboard
include_package_data = True
install_requires =
    Flask==2.3.3
    Flask-Cors==4.0.0
    Flask-Session==0.5.0
    schema==0.7.5
    pyproj==3.6.1
    rose@git+https://github.com/PlatypusBytes/ROSE
    SignalProcessing@git+https://github.com/PlatypusBytes/SignalProcessing.git
    WolfStiffness@git+https://github.com/PlatypusBytes/WolfStiffness.git
python_requires = >=3.9

[options.extras_require]
testing =
    pytest==7.4.2